Colleges and other features

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "illuminate/database": "^5.2",
-        "illuminate/events": "^5.2"
+        "illuminate/events": "^5.2",
+        "nette/mail": "^2.3",
+        "illuminate/validation": "^5.2"
     }
 }
